2007-03-23  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/dtCMatrix.c (dtCMatrix_solve): use the new code from Kasper
	Kristensen based cs_spsolve() instead of _lsolve & _usolve which
	can be much faster.

	* tests/matprod.R: add regression tests for these (upper & lower).

2007-03-19  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Matrix.R (diff): method for our Matrices.

	* R/sparseMatrix.R (isDiagonal): check dim()!

2007-03-17  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Matrix.R (dim<-): new method for "reshape()" built on a
	proposal from Tamas Papp.

2007-03-16  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/AllGeneric.R: remove all  if(!isGeneric(.))  clauses

	* R/zzz.R (.onLoad, .onUnload): do *not* leave bind_activation(TRUE);
	rather define cBind() and rBind();
	and also cbind()/rbind {in Matrix, but exported}.


2007-02-16  Douglas Bates  <bates@r-project.org>

	* DESCRIPTION (Date, Version): 0.9975-11 with new date
	* src/dgCMatrix.c (R_to_CMatrix, compressed_to_TMatrix): remove
	const modifier on declaration of the array 'valid'

2007-02-12  Douglas Bates  <bates@stat.wisc.edu>

	* R/CHMfactor.R: Add image method (coercion to sparseMatrix).

2007-02-05  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Date, Version): 0.9975-10 with new date.

	* R/Ops.R (Arith): make sure Csparse o Csparse also works for e.g. ntCMatrix
	* tests/simple.R: test the above and some of these coercions:

	* R/nsparseMatrix.R: coercing "Csparse" to "lsparseMatrix";
		be careful to avoid infinite recursion, using new coercions in
	* R/ngCMatrix.R and nsC... and ntC...
	* R/lsparseMatrix.R: ditto

	* R/SparseM-conv.R: more conversion, notably for triplet matrices.

	* src/dgCMatrix.c (R_to_C_Matrix): port Doug's fix and
	* R/Rsparse.R: reactivate .Call()s

	* tests/Class+Meth.R: a bit more on actual classes

2007-02-04  Douglas Bates  <bates@stat.wisc.edu>

	* src/dgCMatrix.c (compressed_to_TMatrix): fix memory bug using strdup()
