@@ -1,3 +1,8 @@
+2007-03-27  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/kronecker.R: new file collecting kronecker() methods in one
+		place.  Goal: become much faster!
+
 2007-03-23  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* src/dtCMatrix.c (dtCMatrix_solve): use the new code from Kasper
@@ -22,9 +27,11 @@
 	* R/AllGeneric.R: remove all  if(!isGeneric(.))  clauses
 
 	* R/zzz.R (.onLoad, .onUnload): do *not* leave bind_activation(TRUE);
-	rather define cBind() and rBind();
-	and also cbind()/rbind {in Matrix, but exported}.
+	rather define and export  cBind() and rBind() only.
+	--> useRs *must* change code that used to have cbind()/rbind() !!
 
+	* R/bind.R: change tests from cbind() to cBind() and similarly to rBind()
+	* R/bind.Rout.save: ditto
 
 2007-02-16  Douglas Bates  <bates@r-project.org>
 
